--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/flower.ico">
-  <meta name="description" content="At APSP, we are your guides, your counselors, your peers, your mentors, your confidants and some of your most trusted friends. We care about our community’s rich and diverse Asian American and Pacific Islander culture as much as you do because, above all else, we are your brothers and sisters, and a vibrant and active part of UCR’s Asian American and Pacific Islander student population. This is where new friendships start. This is where lost traditions are rekindled. This is where your questions get answered. This is where we break down cultural barriers through respectful, educational dialogue. At APSP, you’re part of our family — this is your home away from home.">
-  <meta name="author" content="862453789">
+  <meta name="description" content="I created this website to show my experiences as a PI woman and to showcase my work."
+  <meta name="author" content="8624539">
 
   <title>Maya Meaole - Asian Pacific Student Programs</title>
 
@@ -134,8 +134,6 @@
           </div>
         </div>
 
-
-
       </div>
 
     </section>
@@ -176,7 +174,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> Maya Meaole</center><br>
+  </script> Maya Meao/center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
