--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/flower.ico">
-  <meta name="description" content="I created this website to show my experiences as a PI woman and to showcase my work."
+  <meta name="description" content="I created this website to show my experiences as a PI woman and to showcase my work.">
   <meta name="author" content="8624539">
 
   <title>Maya Meaole - Asian Pacific Student Programs</title>
